--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 .App {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  
+}
+
+body{
+  background-color: #F6F7FC;
+}
+
+.home-back{
+  background-image: url("https://res.cloudinary.com/alinanovof/image/upload/v1620928027/pexels-tatiana-614484_wcyyy3.jpg");
 }
 
