--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ body{
 
 .hotelItem{
   margin-top: 10px;
-  padding: 18px;
-  border: indigo solid 1px;
+  padding: 20px;
+  /* border: indigo solid 1px; */
 }
 .search{
 margin-top: 10px;
